Bug 401959 - Do not display empty Featured page on startup if internet connection is absent
Summary: Do not display empty Featured page on startup if internet connection is absent
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-12-10 14:29 UTC by Alexander Mentyu
Modified: 2019-08-14 15:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-12-10 14:29:39 UTC
STEPS TO REPRODUCE
1. Start some live USB that has Discover preinstalled or just
2. Start Discover without connecting to internet.

OBSERVED RESULT
Empty 'Featured' apps list appears

EXPECTED RESULT
For example 'Installed' apps list appears

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-42-generic
Comment 1 Aleix Pol 2018-12-13 03:47:55 UTC
¯\_(ツ)_/¯

How about we show a message saying "please get an internet connection"?

It's not like discover will be very useful until there's information to fetch.
Comment 2 Nate Graham 2018-12-13 15:06:40 UTC
(In reply to Aleix Pol from comment #1)
> ¯\_(ツ)_/¯
> 
> How about we show a message saying "please get an internet connection"?
> 
> It's not like discover will be very useful until there's information to
> fetch.
It seems stupid, but that would really help. The very fact that Discover isn't very useful without an internet connection is why it would be nice to display that requirement/limitation to the user right in the app itself when it's not available.
Comment 3 Aleix Pol 2018-12-13 18:59:27 UTC
Git commit ede4a7c75cb8c26e39d0f24de78ff1f777d83e8e by Aleix Pol.
Committed on 13/12/2018 at 18:56.
Pushed by apol into branch 'master'.

Show an error if we couldn't find any resources from the featured apps

M  +5    -3    discover/FeaturedModel.cpp
M  +9    -0    discover/FeaturedModel.h
M  +8    -0    discover/qml/BrowsingPage.qml

https://commits.kde.org/discover/ede4a7c75cb8c26e39d0f24de78ff1f777d83e8e
Comment 4 Nate Graham 2019-08-14 15:28:45 UTC
Git commit 131071136f56604403ec2fae15d17e07c95670aa by Nate Graham.
Committed on 14/08/2019 at 15:28.
Pushed by ngraham into branch 'master'.

Improve "No internet connection!" error message

Summary:
Old message was a bit unclear. Hopefully this is better. Added an icon too to help get the message across, and because icons are pretty. :)

Test Plan:
Disable internet connection and launch Discover:
{F7247077, size=full}

Reviewers: #discover_software_store, #vdg, apol, leinir

Reviewed By: leinir

Subscribers: GB_2, rooty, pino, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D17598

M  +14   -3    discover/qml/BrowsingPage.qml

https://commits.kde.org/discover/131071136f56604403ec2fae15d17e07c95670aa