Show an error if we couldn't find any resources from the featured apps

BUG: 401959